Quick fix for the sidebar getting too long
Although ultimately I don't think this layout was designed to accomodate so much stuff in it.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,8 @@
 /* Sidebar menu */
+.sidebar {
+    overflow-y: scroll;
+}
+
 .sidebar-taxonomy ul {
     display: flex;
     flex-flow: row wrap;
